--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,12 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "g++ -std=c++14 week5_dynamic_programming1/1_money_change_again/change_dp.cpp -o output.out",
+            "command": "g++ -std=c++14 -g week5_dynamic_programming1/1_money_change_again/change_dp.cpp -o output.out",
             "group": {
+                "kind": "build",
                 "isDefault": true
             },
+            "problemMatcher": "$gcc"
         },
         {
             "label": "run",
